Fix bug: horizontal extra space

--- a/website/src/component/HomeContent/ContentCover.css
+++ b/website/src/component/HomeContent/ContentCover.css
@@ -9,6 +9,7 @@
   position: relative;
   height: 100%;
   width: 100vw;
+  max-width: 100%;
   object-fit: cover;
 }
 
