--- a/website/src/component/Pages/HomePage.css
+++ b/website/src/component/Pages/HomePage.css
@@ -1,5 +1,6 @@
 .homepage-containter {
-  overflow: auto;
+  width: 100vw;
+  max-width: 100%;
 }
 
 .homepage-header {
@@ -13,12 +14,15 @@
 } */
 
 .homepage-footer {
+  width: 100vw;
   max-width: 100%;
   text-align: center;
   background-color: black;
 }
 
 .content-category-containter {
+  width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
