--- a/website/src/component/Pages/ServicePage.css
+++ b/website/src/component/Pages/ServicePage.css
@@ -1,13 +1,20 @@
-.servicepage-containter {
-  height: 170vh;
+/* .servicepage-containter {
+  height: 100vh;
   width: 100vw;
   background-color: lightgray;
-}
+} */
 
 .servicepage-cover {
   height: calc(70vh + 80px);
   width: 100vw;
+  max-width: 100%;
   background-color: yellow;
+}
+
+.servicepage-main {
+  height: calc(100vh - 80px);
+  width: 100vw;
+  max-width: 100%;
 }
 
 .servicepage-sidebar {
